@@ -8,8 +8,6 @@ import java.awt.event.*;
 import java.io.*;
 import java.util.*;
 
-import static Game.Main.pause;
-
 /**
  * Creates a GUI to create the code for rune classes
  *
@@ -35,33 +33,40 @@ public class CreateRuneFile extends JFrame
     /**
      * Creates the GUI and implements the keyboard shortcuts
      *
-     * @param runeNum    current rune number
+     * @param runeNum    Current rune number
      * @param singleRune True if the GUI should create one rune then stop, false otherwise
      * @param fileName   The name of the file to write to
-     * @throws IndexOutOfBoundsException if runeNum is out of range
+     * @throws IndexOutOfBoundsException If runeNum is out of range
      */
     public CreateRuneFile(int runeNum, boolean singleRune, String fileName)
     {
-        currentRuneNumLabel.setText("Current rune number: " + runeNum);
+        currentRuneNumLabel.setText("Current rune number: %d".formatted(runeNum));
         if (runeNum < 1 || runeNum > 8)
         {
             throw new IndexOutOfBoundsException("runeNum must be between 1 and 8 inclusive");
         }
+        //Add all rune attributes
         addAllAttributes(attributes);
+        //Prevent keyboard inputs
         attributes.setFocusTraversalKeysEnabled(false);
         
+        //Remove blank option
         runeTypes.removeItem(0);
         
+        //Add al rune set types
         addAllTypes(runeTypes);
-        
+        //Prevent keyboard inputs
         runeTypes.setFocusTraversalKeysEnabled(false);
         
+        //General GUI stuff
         add(panel);
         setTitle("Select main attribute");
         setSize(900, 400);
         setLocationRelativeTo(null);
         setDefaultCloseOperation(EXIT_ON_CLOSE);
         setVisible(true);
+        
+        //Automatically set the rune type to an artifact and set the focus on the attribute selector if needed
         switch (runeNum)
         {
             case 7 ->
@@ -77,9 +82,9 @@ public class CreateRuneFile extends JFrame
             default -> runeTypes.requestFocusInWindow();
         }
         
+        //Click the add attribute button if the Enter key is pressed while focused on the amount text field
         amountTextField.addKeyListener(new KeyAdapter()
         {
-            @Override
             public void keyPressed(KeyEvent e)
             {
                 if (e.getKeyChar() == '\n')
@@ -89,6 +94,7 @@ public class CreateRuneFile extends JFrame
             }
         });
         
+        //Switch focus to the attribute selector if the Tab key is pressed while focused on the rune type selector
         runeTypes.addKeyListener(new KeyAdapter()
         {
             public void keyPressed(KeyEvent e)
@@ -100,6 +106,8 @@ public class CreateRuneFile extends JFrame
             }
         });
         
+        //Submit the rune if the Escape key is pressed while focused on the attribute selector
+        //Automatically fill in values and submit if the current rune is an artifact and the Tab key is pressed
         attributes.addKeyListener(new KeyAdapter()
         {
             public void keyPressed(KeyEvent e)
@@ -133,18 +141,20 @@ public class CreateRuneFile extends JFrame
             {
                 if (stringIsInt(amountTextField.getText()))
                 {
+                    //Add selected attribute and amount as a main attribute if there is none yet
                     if (mainAttribute == null)
                     {
-                        mainAttribute = "Rune." + Objects.requireNonNull(attributes.getSelectedItem()).toString().toUpperCase() + ", " + amountTextField.getText();
+                        mainAttribute = "Rune.%s, %s".formatted(Objects.requireNonNull(attributes.getSelectedItem()).toString().toUpperCase(), amountTextField.getText());
                         mainAttributeLabel.setText("Add sub attributes, press \"done\" when done.");
                         setTitle("Select sub attributes");
                     }
-                    else
+                    else //Add the selected attribute and amount as a sub attribute
                     {
-                        subAttributes.add("Rune." + Objects.requireNonNull(attributes.getSelectedItem()).toString().toUpperCase() + ", " + amountTextField.getText());
+                        subAttributes.add("Rune.%s, %s".formatted(Objects.requireNonNull(attributes.getSelectedItem()).toString().toUpperCase(), amountTextField.getText()));
                     }
+                    //Remove choice
                     attributes.removeItem(attributes.getSelectedItem());
-                    runeType = "Rune." + Objects.requireNonNull(runeTypes.getSelectedItem()).toString().toUpperCase();
+                    runeType = "Rune.%s".formatted(Objects.requireNonNull(runeTypes.getSelectedItem()).toString().toUpperCase());
                     amountTextField.setText("");
                     attributes.requestFocusInWindow();
                 }
@@ -154,34 +164,41 @@ public class CreateRuneFile extends JFrame
                     amountTextField.requestFocusInWindow();
                 }
             }
-            else
+            else //No amount entered
             {
+                //Set focus to amount text field
                 amountTextField.setText("");
                 amountTextField.requestFocusInWindow();
             }
         });
+        
         submit.addActionListener(_ -> {
+            //Make sure at least one attribute was entered
             if (mainAttribute != null)
             {
+                //Format sub attributes into String
                 String subs = "";
                 for (String s : subAttributes)
                 {
-                    subs += s + ", ";
+                    subs += "%s, ".formatted(s);
                 }
                 if (!subs.isEmpty())
                 {
                     subs = subs.substring(0, subs.length() - 2);
                 }
+                //Write rune to file
                 if (!singleRune)
                 {
                     writeRuneToFile(fw, Rune.stringToNum(runeType.substring(5)), mainAttribute.substring(5, mainAttribute.indexOf(",")),
                             Integer.parseInt(mainAttribute.substring(mainAttribute.indexOf(", ") + 2)), subs);
                 }
+                //Dispose the current rune creator
                 dispose();
-                if (singleRune)
+                if (singleRune) //Write a single rune to the file
                 {
                     try
                     {
+                        //Create a temp file to parse new rune from
                         File f = new File("src/Runes/Monster_Runes/temp.csv");
                         FileWriter writer = new FileWriter(f);
                         writeRuneToFile(writer, Rune.stringToNum(runeType.substring(5)), mainAttribute.substring(5, mainAttribute.indexOf(",")),
@@ -189,13 +206,16 @@ public class CreateRuneFile extends JFrame
                         writer.close();
                         
                         Rune newRune = MonsterRunes.getRunesFromFile("temp.csv", new Monster()).getFirst();
+                        //Delete temp file
                         f.delete();
+                        //Attempt to replace rune in file
                         if (EditRuneFile.editFile(fileName, runeNum, newRune))
                         {
                             new Message("Success", false);
                         }
                         else
                         {
+                            //Something went wrong
                             new Message("Error", true);
                         }
                         return;
@@ -205,20 +225,22 @@ public class CreateRuneFile extends JFrame
                         throw new RuntimeException(ex);
                     }
                 }
+                //Exit after last rune
                 if (runeNum == 8)
                 {
                     System.exit(0);
                 }
-                else
+                else //Create another window for the next rune
                 {
                     new CreateRuneFile(runeNum + 1, false, fileName);
                 }
             }
-            else
+            else //Set focus to amount text field to get the main attribute
             {
                 amountTextField.requestFocusInWindow();
             }
         });
+        //Stop creating runes
         quitButton.addActionListener(_ -> System.exit(0));
         
         attributes.addFocusListener(new FocusAdapter()
@@ -227,24 +249,26 @@ public class CreateRuneFile extends JFrame
             {
                 if (mainAttribute == null)
                 {
-                    switch ("" + runeNum)
+                    //Automatically set attribute if possible
+                    switch (runeNum)
                     {
-                        case "1" ->
+                        case 1 ->
                         {
                             attributes.setSelectedItem("Atk");
                             amountTextField.requestFocusInWindow();
                         }
-                        case "3" ->
+                        case 3 ->
                         {
                             attributes.setSelectedItem("Def");
                             amountTextField.requestFocusInWindow();
                         }
-                        case "5" ->
+                        case 5 ->
                         {
                             attributes.setSelectedItem("HP");
                             amountTextField.requestFocusInWindow();
                         }
-                        case "7", "8" ->
+                        //Only attack, defense, and HP selectable for artifacts
+                        case 7, 8 ->
                         {
                             attributes.removeAllItems();
                             attributes.addItem("Atk");
@@ -253,6 +277,7 @@ public class CreateRuneFile extends JFrame
                         }
                     }
                     
+                    //Only allow attack, defense, and HP to be selectable if the user is creating an artifact
                     switch (Objects.requireNonNull(runeTypes.getSelectedItem()).toString())
                     {
                         case "ElementArtifact", "TypeArtifact" ->
@@ -279,16 +304,18 @@ public class CreateRuneFile extends JFrame
      */
     public static void writeRuneToFile(FileWriter fw, int type, String mainName, int mainAmount, String subs)
     {
+        //Get the main attribute number
         int mainNum = Rune.stringToNum(mainName);
         
+        //Unknown attribute or type
         if (mainNum == -1 || type == -1)
         {
-            throw new RuntimeException("Can not find Main Attribute or type, " + String.format("Main Attribute: %s, type: %s", mainName,
-                    Rune.numToType(type)));
+            throw new RuntimeException("Can not find Main Attribute or type, %s".formatted(String.format("Main Attribute: %s, type: %s", mainName, Rune.numToType(type))));
         }
         
         try
         {
+            //Format sub attributes
             ArrayList<String> subAttributes = new ArrayList<>(Arrays.asList(subs.split(", ")));
             
             ArrayList<Integer> subNums = new ArrayList<>();
@@ -297,16 +324,17 @@ public class CreateRuneFile extends JFrame
             {
                 for (String sub : subAttributes)
                 {
+                    //Attempt to add attribute number
                     if (count % 2 == 0)
                     {
                         int temp = Rune.stringToNum(sub.substring(5));
                         if (temp == -1)
                         {
-                            throw new RuntimeException("Can not find Sub Attribute: " + sub);
+                            throw new RuntimeException("Can not find Sub Attribute: %s".formatted(sub));
                         }
                         subNums.add(temp);
                     }
-                    else
+                    else //Add attribute amount
                     {
                         subNums.add(Integer.parseInt(sub));
                     }
@@ -314,10 +342,12 @@ public class CreateRuneFile extends JFrame
                 }
             }
             
+            //Write the rune type and main attribute to file
             fw.write(String.format("%d,%d,%d", type, mainNum, mainAmount));
+            //Write sub attributes to file
             for (Integer num : subNums)
             {
-                fw.write("," + num);
+                fw.write(",%d".formatted(num));
             }
             fw.write("\n");
         }
@@ -335,13 +365,15 @@ public class CreateRuneFile extends JFrame
      */
     public static void writeRuneToFile(FileWriter fw, Rune runeToWrite)
     {
+        //Get the rune type and main attribute
         int type = runeToWrite.getType();
         int mainNum = runeToWrite.getMainAttribute().getNum();
         int mainAmount = runeToWrite.getMainAttribute().getAmount();
-        
         try
         {
+            //Write the rune type and main attribute
             fw.write(String.format("%d,%d,%d", type, mainNum, mainAmount));
+            //Write each sub attribute
             for (SubAttribute subAttribute : runeToWrite.getSubAttributes())
             {
                 fw.write(String.format(",%d,%d", subAttribute.getNum(), subAttribute.getAmount()));
@@ -355,17 +387,18 @@ public class CreateRuneFile extends JFrame
     }
     
     /**
-     * Instantiates all needed variables and starts the GUI.
+     * Instantiates all the necessary variables and starts the GUI.
      *
-     * @param args       Contains the name of the file to write to if there is one, otherwise should be {"0"}
-     * @param singleRune True if the GUI will create one rune, false otherwise
+     * @param fileName   The name of the file to write to if there is one, otherwise should be {"0"}
+     * @param singleRune True if the GUI creates one rune, false otherwise
      * @param startPlace The rune place number to start with
      */
-    public static void run(String[] args, boolean singleRune, int startPlace)
+    public static void run(String fileName, boolean singleRune, int startPlace)
     {
-        String fileName;
-        if (args.length > 0 && args[0].equals("0"))
+        //No file name given
+        if (fileName.equals("0"))
         {
+            //Get valid file name
             fileName = Runes.getFileName();
             if ((fileName).equals("tempFile") || (fileName).equals("oldTempFile"))
             {
@@ -375,21 +408,22 @@ public class CreateRuneFile extends JFrame
             }
             try
             {
-                fw = new FileWriter("src/Runes/Monster_Runes/" + fileName + ".csv");
+                //Create a new FileWriter for the file name
+                fw = new FileWriter("src/Runes/Monster_Runes/%s.csv".formatted(fileName));
             }
             catch (IOException e)
             {
                 throw new RuntimeException(e);
             }
         }
-        else
+        else //File name provided
         {
             try
             {
-                fileName = args[0];
                 if (!singleRune)
                 {
-                    fw = new FileWriter("src/Runes/Monster_Runes/" + args[0]);
+                    //Create a FileWriter for the provided file name if the program is creating more than one rune
+                    fw = new FileWriter("src/Runes/Monster_Runes/%s".formatted(fileName));
                 }
             }
             catch (IOException e)
@@ -398,6 +432,7 @@ public class CreateRuneFile extends JFrame
             }
         }
         
+        //Close the FileWriter if the program unnaturally stops
         Runtime.getRuntime().addShutdownHook(new Thread(() -> {
             try
             {
@@ -418,6 +453,7 @@ public class CreateRuneFile extends JFrame
      */
     public static void addAllAttributes(JComboBox<String> selector)
     {
+        //Remove all previous items then add all the attributes
         selector.removeAllItems();
         selector.addItem("Atk");
         selector.addItem("AtkPercent");
@@ -439,13 +475,16 @@ public class CreateRuneFile extends JFrame
      */
     public static void addAllTypes(JComboBox<String> selector)
     {
+        //Read from the rune key file
         Scanner read = new Scanner(Objects.requireNonNull(Rune.class.getResourceAsStream("Rune key.csv")));
+        //Add each rune type
         while (read.hasNextLine())
         {
             String[] line = read.nextLine().split(",");
             selector.addItem(line[1]);
         }
         
+        //Add artifact types
         selector.addItem("ElementArtifact");
         selector.addItem("TypeArtifact");
     }
@@ -453,18 +492,20 @@ public class CreateRuneFile extends JFrame
     /**
      * Tests if the given String is an int
      *
-     * @param s the string to test
-     * @return true if s is an int
+     * @param s The string to test
+     * @return True if s is an int
      */
     public static boolean stringIsInt(String s)
     {
         try
         {
+            //Parse the string for an int and return true if no errors
             Integer.parseInt(s);
             return true;
         }
         catch (NumberFormatException e)
         {
+            //Return false if String cannot be parsed
             return false;
         }
     }
